crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__all_logical_operators.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    And,
    Or,
    Not,
    In,
    Is,
    Like,
    Eof,
]
