crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__complete_create_statement.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    Create,
    User,
    Identifier(
        "alice",
    ),
    With,
    Email,
    String(
        "alice@example.com",
    ),
    Eof,
]
