crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__empty_string.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    String(
        "",
    ),
    Eof,
]
