crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__hyphenated_identifier.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    Identifier(
        "my-project-name",
    ),
    Eof,
]
