crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__issue_id_format.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    Identifier(
        "backend",
    ),
    Hash,
    Number(
        123,
    ),
    Eof,
]
