crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__string_with_spaces.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    String(
        "hello   world",
    ),
    Eof,
]
