crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_boolean.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    True,
    False,
    True,
    False,
    Eof,
]
