crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_case_insensitive.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
Ok(
    [
        Create,
        Select,
        Update,
        Eof,
    ],
)
