crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_entity_types.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    Users,
    Projects,
    Issues,
    Comments,
    Eof,
]
