crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_escaped_quotes.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    String(
        "She said 'hello'",
    ),
    Eof,
]
