crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_escaped_string.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
Ok(
    [
        String(
            "hello\nworld\t!",
        ),
        Eof,
    ],
)
