crates/iql-parser/src/snapshots/issuecraft_ql__lexer__tests__tokenize_field_names.snap
---
source: crates/iql-parser/src/lexer.rs
expression: "&tokens"
---
[
    Email,
    Name,
    Title,
    Description,
    Priority,
    Eof,
]
